app-in-apps/yaml/metabase/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase-deployment
  labels:
    app: metabase
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: metabase-workdir
              mountPath: "/dev/random"
      volumes:
        - name: metabase-workdir
          persistentVolumeClaim:
            claimName: metabase-workdir-pvc
