app-in-apps/yaml/metabase/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: metabase
  labels:
    app: metabase
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: haproxy
  rules:
    - host: metabase.nexus-core.dev
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: metabase-service-ingress
                port:
                  name: adminpanel
  tls:
    - hosts:
        - metabase.nexus-core.dev
      secretName: metabase-ingress-secret
